<resources>
    <string name="app_name">ChinaChef</string>
    <string name="action_settings">Settings</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="appetizers">Appetizers</string>
    <string name="website_url">smchinachef.com</string>
    <string name="new_order">New Order</string>
    <string name="create_order">Create Order</string>
    <string name="pick_up">Pick-Up</string>
    <string name="delivery">Delivery</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="customer_address">Customer Address</string>
    <string name="cash">Cash</string>
    <string name="credit_debit">Credit/Debit</string>
    <string name="card_number">Card Number</string>
    <string name="exp_date">Exp Date</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="add_to_order">Add to Order</string>
    <string name="Price">Price</string>
    <string name="na">N/A</string>
    <string name="mild">Mild</string>
    <string name="medium">Medium</string>
    <string name="hot">Hot</string>
    <string name="spiciness">Spiciness</string>
    <string name="customize">Customize</string>
    <string name="no_description">No Description</string>
    <string name="cancel">Cancel</string>
</resources>
